--- a/FileForReference/rock-the-vote/client/package.json
+++ b/FileForReference/rock-the-vote/client/package.json
@@ -4,11 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.0",
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "express": "^4.16.2",
-    "mongoose": "^4.12.5",
-    "morgan": "^1.9.0",
+    "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
